[tool.poetry]
name = "timberlake"
version = "1.0.3"
description = "AWS attack automation utility"
authors = ["2XXE <root@example.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^3.0.1"
boto3 = "^1.17.111"
desert = "^2020.11.18"
marshmallow-enum = "^1.5.1"
py-attire-schema = {git = "https://github.com/SecurityRiskAdvisors/py-attire-schema.git", rev = "main"}
gql = {extras = ["all"], version = "^3.4.0"}
pydantic = "^1.10.2"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
timberlake = "timberlake.cli:cli_main"
